# bei

./: Cargo.toml  readme.md
.cargo/: config.toml
bei/: Cargo.toml
bei/src/: main.rs  tests.rs
kernel/: Cargo.toml
kernel/src/: allocator.rs  drawing.rs  executor.rs  fixed_size_block.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  memory.rs  panic.rs  shell.rs  task.rs  test_runner.rs  vga.rs  windowing.rs
src/: main.rs  vga.rs
