[package]
name = "bei"
version = "0.1.0"
edition = "2021"

[dependencies]
bei-kernel = { path = "../kernel" }
x86_64 = "0.14.10"
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
lazy_static = "1.4.0"
vga = "0.2.9"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
